# agent-base

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROVIDER_TEST_RESULTS.md  README.md  USAGE.md  pyproject.toml  test_output.txt
.claude/commands/: bug.md  chore.md  feature.md  implement.md  install.md  prime.md
.github/: copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  security.yml
docker/mem0/: README.md  config.yaml  docker-compose.yml
docs/: GETTING_STARTED_OBSERVABILITY.md  OBSERVABILITY.md
docs/decisions/: 0003-multi-provider-llm-architecture.md  0008-testing-strategy-and-coverage-targets.md  0010-display-output-format.md  0011-session-management-architecture.md  0012-middleware-integration-strategy.md  0013-memory-architecture.md  0014-observability-integration.md  0016-local-provider-integration.md  0018-trace-level-llm-logging.md  0019-skill-progressive-discovery.md  0020-legacy-config-deprecation-plan.md  README.md
docs/design/: architecture.md  configuration.md  requirements.md  skills.md  usage.md
docs/specs/: AEGIS_INTEGRATION.md  add-skill-structured-triggers.md  bug-skill-progressive-discovery.md  configurable-system-prompt.md  filesystem-tools.md  foundation.md  friendly-provider-error-messages.md  gemini-provider-support.md  github-provider-integration.md  interactive.md  legacy-config-removal.md  local-provider-integration.md  mem0-semantic-memory.md  memory-support.md  observability-integration.md  skill-architecture.md  sticky-prompt-bar.md  textual-tui-migration.md  trace-level-llm-logging.md  web-access-skill.md
examples/: observability_example.py
skills/core/hello-extended/: SKILL.md
skills/core/kalshi-markets/: SKILL.md
skills/core/web-access/: SKILL.md
src/agent/: __init__.py  activity.py  agent.py  cli.py  config.py  events.py  exceptions.py  middleware.py  observability.py  persistence.py  trace_logger.py
src/agent/cli/: app.py  commands.py  config_commands.py  constants.py  display.py  error_handler.py  execution.py  health.py  interactive.py  session.py  skill_commands.py  utils.py
src/agent/config/: __init__.py  constants.py  defaults.py  legacy.py  manager.py  schema.py
src/agent/display/: __init__.py  context.py  events.py  tree.py
src/agent/memory/: __init__.py  context_provider.py  manager.py  mem0_store.py  mem0_utils.py  persistence.py  store.py
src/agent/prompts/: __init__.py  system.md
src/agent/proto/: __init__.py  aegis.proto  aegis_pb2.py  aegis_pb2_grpc.py
src/agent/skills/: __init__.py  context_provider.py  documentation_index.py  errors.py  loader.py  manager.py  manifest.py  registry.py  script_tools.py  security.py
src/agent/tools/: __init__.py  aegis.py  filesystem.py  hello.py  toolset.py
src/agent/utils/: __init__.py  responses.py  terminal.py  tokens.py
tests/: README.md  conftest.py
tests/fixtures/: agent.py  config.py  memory.py
tests/helpers/: __init__.py  assertions.py  builders.py
tests/integration/: test_hello_integration.py  test_middleware_integration.py  test_session_persistence.py  test_telemetry_integration.py
tests/integration/config/: test_config_integration.py
tests/integration/llm/: README.md  __init__.py  conftest.py  test_anthropic_integration.py  test_local_integration.py  test_openai_integration.py  test_tool_invocation.py
tests/mocks/: mock_client.py
tests/templates/: __init__.py  test_integration_template.py  test_llm_template.py  test_tool_template.py
tests/unit/: test_cli_toolbar.py  test_config.py  test_display_context.py  test_display_events.py  test_display_tree.py  test_events.py  test_hello_tools.py  test_middleware.py  test_persistence.py
tests/unit/cli/: test_cli.py  test_cli_args.py  test_cli_toolbar.py  test_config_commands.py  test_error_handler.py  test_health_check_logging.py  test_observability_setup.py  test_utils.py
tests/unit/config/: test_manager.py  test_schema.py  test_skills_config.py
tests/unit/core/: test_agent.py  test_config.py  test_config_local.py  test_config_minimal.py  test_events.py  test_observability.py  test_system_prompt.py
tests/unit/display/: test_display_context.py  test_display_events.py  test_display_tree.py
tests/unit/memory/: test_mem0_store.py  test_mem0_utils.py  test_memory_config.py  test_memory_integration.py  test_memory_manager.py  test_memory_persistence.py  test_memory_store.py  test_thread_persistence_memory.py
tests/unit/middleware/: test_middleware.py  test_trace_logging_middleware.py
tests/unit/persistence/: test_persistence.py
tests/unit/providers/: test_gemini_chat_client.py  test_github_auth.py
tests/unit/skills/: __init__.py  test_context_provider.py  test_errors.py  test_loader.py  test_manager.py  test_manifest.py  test_registry.py  test_script_tools.py  test_security.py
tests/unit/tools/: test_aegis_tools.py  test_filesystem_tools.py  test_hello_tools.py
tests/unit/trace/: test_trace_logger.py
tests/validation/: agent_validation.yaml  agent_validation_advanced.yaml  run_validation.py  test_agent_validation.py
(+20 files in other folders)
